fix to take out testing and z-index stuff for mobile projects cutoff text

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -44,7 +44,6 @@ h1 {
         transform: rotate(180deg);
         padding-bottom: 5px;
         text-align: start;
-        z-index: -10;
     }
     ul {
         @include mq('tablet'){
