--- a/styles/style.css
+++ b/styles/style.css
@@ -638,7 +638,6 @@ h1 {
           transform: rotate(180deg);
   padding-bottom: 5px;
   text-align: start;
-  z-index: -10;
 }
 .menu ul {
   opacity: 0%;
